--- a/css/forms.css
+++ b/css/forms.css
@@ -7,8 +7,9 @@ html {
 body {
 	font-family: 'Sansita Swashed', cursive;
 	background-image: url(../img/galaxy.jpg);
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
+	width: 80%;
 }
 .wrapper {
 	width: 80%;
